--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,71 +103,7 @@
         </div>
         </a>
     </div>
-    <div class="mb-cards">
-        <h2>NNANANANA</h2>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente</P>
-        <ul>
-            <li>
-                <img src="img/meubles-cards/1M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/2M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/3M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/4M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/5M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/6M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/7M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/8M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/9M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-            <li>
-                <img src="img/meubles-cards/10M.jpg" alt="">
-                <h3>nanani</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit eligendi accusantium, perspiciatis sapiente .</p>
-                <a href="#">Watch more</a>
-            </li>
-        </ul>
+   
     </div>
     <div class="think">
         <img src="img/think.jpg" alt="">
