--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,8 +38,8 @@
          <source src="video-tuto.mp4" type="video/mp4">
         </video>
         <div class="video-discreption">
-        <h2>NANANA</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nisi nobis nemo corporis aliquam adipisci cumque odio eum officia ratione, temporibus esse libero quidem modi totam impedit aspernatur dignissimos. Aliquam, non?</p>
+        <h2>Ready to get started?</h2>
+        <p>Ready to dive into the world of interior design? <br> Explore the art of transformation and creativity in our captivating video. Are you prepared to begin?</p>
     </div>
     </div>
     <div class="about-us">
@@ -104,7 +104,6 @@
         </a>
     </div>
    
-    </div>
     <div class="think">
         <img src="img/think.jpg" alt="">
        <div class="think-content">
